add: plane webgl

--- a/src/works24/index.html
+++ b/src/works24/index.html
@@ -18,61 +18,61 @@
         <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: rgb(207, 106, 6)">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: #cd1616">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: #25cb00">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: #db07c3">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: #0800fe">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: rgb(85, 164, 242)">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: rgb(195, 221, 21)">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: #333">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: rgb(207, 106, 6)">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: #cd1616">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: #25cb00">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: #db07c3">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: #0800fe">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: rgb(85, 164, 242)">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: rgb(195, 221, 21)">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: #db07c3">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: #0800fe">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: rgb(85, 164, 242)">
+        <li class="item">
           <div class="item__img"></div>
         </li>
-        <li class="item" style="background: rgb(195, 221, 21)">
+        <li class="item">
           <div class="item__img"></div>
         </li>
       </ul>
