add: base webgl works25

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,7 @@
         <li><a href="works22/index.html">works22</a></li>
         <li><a href="works23/index.html">works23</a></li>
         <li><a href="works24/index.html">works24</a></li>
+        <li><a href="works25/index.html">works25</a></li>
       </ul>
     </div>
   </body>
