add: webgl image works25

--- a/src/works25/index.html
+++ b/src/works25/index.html
@@ -15,7 +15,7 @@
     <main>
       <div class="webgl"></div>
       <div class="image__wrapper">
-        <img src="./src//img/texture.jpg" alt="">
+        <img src="./src/img/texture2.jpg" alt="">
       </div>
     </main>
     <script type="module" src="./src/ts/main.ts"></script>
