add: animation loopText

--- a/src/works25/index.html
+++ b/src/works25/index.html
@@ -14,8 +14,22 @@
     <h1>works25</h1>
     <main>
       <div class="webgl"></div>
-      <div class="image__wrapper">
-        <img src="./src/img/texture2.jpg" alt="">
+      <div class="wrapper">
+        <div class="image__wrapper">
+          <img src="./src/img/texture2.jpg" alt="">
+        </div>
+        <div class="text__wrapper">
+          <p>Beautiful Girl Beautiful Girl</p>
+          <p>Beautiful Girl Beautiful Girl</p>
+          <p>Beautiful Girl Beautiful Girl</p>
+          <p>Beautiful Girl Beautiful Girl</p>
+          <p>Beautiful Girl Beautiful Girl</p>
+          <p>Beautiful Girl Beautiful Girl</p>
+          <p>Beautiful Girl Beautiful Girl</p>
+          <p>Beautiful Girl Beautiful Girl</p>
+          <p>Beautiful Girl Beautiful Girl</p>
+          <p>Beautiful Girl Beautiful Girl</p>
+        </div>
       </div>
     </main>
     <script type="module" src="./src/ts/main.ts"></script>
