fix: change card

--- a/src/works25/index.html
+++ b/src/works25/index.html
@@ -16,19 +16,19 @@
       <div class="webgl"></div>
       <div class="wrapper">
         <div class="image__wrapper">
-          <img src="./src/img/texture2.jpg" alt="">
+          <img src="./src/img/card.png" alt="">
         </div>
         <div class="text__wrapper">
-          <p>Beautiful Girl Beautiful Girl</p>
-          <p>Beautiful Girl Beautiful Girl</p>
-          <p>Beautiful Girl Beautiful Girl</p>
-          <p>Beautiful Girl Beautiful Girl</p>
-          <p>Beautiful Girl Beautiful Girl</p>
-          <p>Beautiful Girl Beautiful Girl</p>
-          <p>Beautiful Girl Beautiful Girl</p>
-          <p>Beautiful Girl Beautiful Girl</p>
-          <p>Beautiful Girl Beautiful Girl</p>
-          <p>Beautiful Girl Beautiful Girl</p>
+          <p>TOON WORLD TOON WORLD</p>
+          <p>TOON WORLD TOON WORLD</p>
+          <p>TOON WORLD TOON WORLD</p>
+          <p>TOON WORLD TOON WORLD</p>
+          <p>TOON WORLD TOON WORLD</p>
+          <p>TOON WORLD TOON WORLD</p>
+          <p>TOON WORLD TOON WORLD</p>
+          <p>TOON WORLD TOON WORLD</p>
+          <p>TOON WORLD TOON WORLD</p>
+          <p>TOON WORLD TOON WORLD</p>
         </div>
       </div>
     </main>
