add: card effect

--- a/src/works25/index.html
+++ b/src/works25/index.html
@@ -16,20 +16,20 @@
       <div class="webgl"></div>
       <div class="wrapper">
         <div class="image__wrapper">
-          <img src="./src/img/card-front.png" alt="">
+          <img src="./src/img/card-front1.png" alt="青眼の白龍">
         </div>
         <div class="text__wrapper">
-          <p>TOON WORLD TOON WORLD</p>
-          <p>TOON WORLD TOON WORLD</p>
-          <p>TOON WORLD TOON WORLD</p>
-          <p>TOON WORLD TOON WORLD</p>
-          <p>TOON WORLD TOON WORLD</p>
-          <p>TOON WORLD TOON WORLD</p>
-          <p>TOON WORLD TOON WORLD</p>
-          <p>TOON WORLD TOON WORLD</p>
-          <p>TOON WORLD TOON WORLD</p>
-          <p>TOON WORLD TOON WORLD</p>
-          <p>TOON WORLD TOON WORLD</p>
+          <p>YU-GI-OH! YU-GI-OH!</p>
+          <p>YU-GI-OH! YU-GI-OH!</p>
+          <p>YU-GI-OH! YU-GI-OH!</p>
+          <p>YU-GI-OH! YU-GI-OH!</p>
+          <p>YU-GI-OH! YU-GI-OH!</p>
+          <p>YU-GI-OH! YU-GI-OH!</p>
+          <p>YU-GI-OH! YU-GI-OH!</p>
+          <p>YU-GI-OH! YU-GI-OH!</p>
+          <p>YU-GI-OH! YU-GI-OH!</p>
+          <p>YU-GI-OH! YU-GI-OH!</p>
+          <p>YU-GI-OH! YU-GI-OH!</p>
         </div>
       </div>
     </main>
