add: planes array

--- a/src/works25/index.html
+++ b/src/works25/index.html
@@ -15,6 +15,23 @@
     <main>
       <div class="webgl"></div>
       <div class="wrapper">
+        <ul class="card__list">
+          <li class="card__item">
+            <div class="card">
+              <img src="./src/img/card-front3.png" alt="青眼の白龍">
+            </div>
+          </li>
+          <li class="card__item">
+            <div class="card">
+              <img src="./src/img/card-front1.png" alt="青眼の白龍">
+            </div>
+          </li>
+          <li class="card__item">
+            <div class="card">
+              <img src="./src/img/card-front2.png" alt="青眼の白龍">
+            </div>
+          </li>
+        </ul>
         <div class="image__wrapper">
           <img src="./src/img/card-front1.png" alt="青眼の白龍">
         </div>
