add: plane effect

--- a/src/works25/index.html
+++ b/src/works25/index.html
@@ -33,7 +33,7 @@
           </li>
         </ul>
         <div class="image__wrapper">
-          <img src="./src/img/card-front1.png" alt="青眼の白龍">
+          <div></div>
         </div>
         <div class="text__wrapper">
           <p>YU-GI-OH! YU-GI-OH!</p>
