add: mouse animation

--- a/src/works25/index.html
+++ b/src/works25/index.html
@@ -14,6 +14,13 @@
     <h1>works25</h1>
     <main>
       <div class="webgl"></div>
+      <div class="modal">
+        <div class="image__wrapper">
+          <div class="pop-up-area"></div>
+        </div>
+        <div class="close"></div>
+      </div>
+
       <div class="wrapper">
         <ul class="card__list">
           <li class="card__item">
@@ -32,22 +39,20 @@
             </div>
           </li>
         </ul>
-        <div class="image__wrapper">
-          <div></div>
-        </div>
-        <div class="text__wrapper">
-          <p>YU-GI-OH! YU-GI-OH!</p>
-          <p>YU-GI-OH! YU-GI-OH!</p>
-          <p>YU-GI-OH! YU-GI-OH!</p>
-          <p>YU-GI-OH! YU-GI-OH!</p>
-          <p>YU-GI-OH! YU-GI-OH!</p>
-          <p>YU-GI-OH! YU-GI-OH!</p>
-          <p>YU-GI-OH! YU-GI-OH!</p>
-          <p>YU-GI-OH! YU-GI-OH!</p>
-          <p>YU-GI-OH! YU-GI-OH!</p>
-          <p>YU-GI-OH! YU-GI-OH!</p>
-          <p>YU-GI-OH! YU-GI-OH!</p>
-        </div>
+      </div>
+
+      <div class="text__wrapper">
+        <p>YU-GI-OH! YU-GI-OH!</p>
+        <p>YU-GI-OH! YU-GI-OH!</p>
+        <p>YU-GI-OH! YU-GI-OH!</p>
+        <p>YU-GI-OH! YU-GI-OH!</p>
+        <p>YU-GI-OH! YU-GI-OH!</p>
+        <p>YU-GI-OH! YU-GI-OH!</p>
+        <p>YU-GI-OH! YU-GI-OH!</p>
+        <p>YU-GI-OH! YU-GI-OH!</p>
+        <p>YU-GI-OH! YU-GI-OH!</p>
+        <p>YU-GI-OH! YU-GI-OH!</p>
+        <p>YU-GI-OH! YU-GI-OH!</p>
       </div>
     </main>
     <script type="module" src="./src/ts/main.ts"></script>
