add: complete works25

--- a/src/works25/index.html
+++ b/src/works25/index.html
@@ -42,17 +42,17 @@
       </div>
 
       <div class="text__wrapper">
-        <p>YU-GI-OH! YU-GI-OH!</p>
-        <p>YU-GI-OH! YU-GI-OH!</p>
-        <p>YU-GI-OH! YU-GI-OH!</p>
-        <p>YU-GI-OH! YU-GI-OH!</p>
-        <p>YU-GI-OH! YU-GI-OH!</p>
-        <p>YU-GI-OH! YU-GI-OH!</p>
-        <p>YU-GI-OH! YU-GI-OH!</p>
-        <p>YU-GI-OH! YU-GI-OH!</p>
-        <p>YU-GI-OH! YU-GI-OH!</p>
-        <p>YU-GI-OH! YU-GI-OH!</p>
-        <p>YU-GI-OH! YU-GI-OH!</p>
+        <span><p>YU-GI-OH! YU-GI-OH!</p></span>
+        <span><p>YU-GI-OH! YU-GI-OH!</p></span>
+        <span><p>YU-GI-OH! YU-GI-OH!</p></span>
+        <span><p>YU-GI-OH! YU-GI-OH!</p></span>
+        <span><p>YU-GI-OH! YU-GI-OH!</p></span>
+        <span><p>YU-GI-OH! YU-GI-OH!</p></span>
+        <span><p>YU-GI-OH! YU-GI-OH!</p></span>
+        <span><p>YU-GI-OH! YU-GI-OH!</p></span>
+        <span><p>YU-GI-OH! YU-GI-OH!</p></span>
+        <span><p>YU-GI-OH! YU-GI-OH!</p></span>
+        <span><p>YU-GI-OH! YU-GI-OH!</p></span>
       </div>
     </main>
     <script type="module" src="./src/ts/main.ts"></script>
