--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,7 @@
         <li><a href="works23/index.html">works23</a></li>
         <li><a href="works24/index.html">works24</a></li>
         <li><a href="works25/index.html">works25</a></li>
+        <li><a href="works26/index.html">works26</a></li>
       </ul>
     </div>
   </body>
