add: works26 animation

--- a/src/works26/index.html
+++ b/src/works26/index.html
@@ -14,6 +14,14 @@
     <h1>works26</h1>
     <main>
       <div class="webgl"></div>
+      <ul class="button-list">
+        <li class="button-item">
+          <button id="inhale">😵‍💫</button>
+        </li>
+        <li class="button-item">
+          <button>&#x1f004;</button>
+        </li>
+      </ul>
     </main>
     <script type="module" src="./src/ts/main.ts"></script>
   </body>
