add: works26 vomit animation

--- a/src/works26/index.html
+++ b/src/works26/index.html
@@ -19,7 +19,10 @@
           <button id="inhale">😵‍💫</button>
         </li>
         <li class="button-item">
-          <button>&#x1f004;</button>
+          <button id="vomit">🤯</button>
+        </li>
+        <li class="button-item">
+          <button id="vomit">🧠</button>
         </li>
       </ul>
     </main>
