--- a/src/index.html
+++ b/src/index.html
@@ -14,33 +14,190 @@
     <div class="wrapper">
       <h1>WebGL works</h1>
       <ul class="list">
-        <li class="item"><a class="item-link" href="works01/index.html"><img class="item-image" src="./assets/images/works01.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works02/index.html"><img class="item-image" src="./assets/images/works02.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works03/index.html"><img class="item-image" src="./assets/images/works03.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works04/index.html"><img class="item-image" src="./assets/images/works04.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works05/index.html"><img class="item-image" src="./assets/images/works05.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works06/index.html"><img class="item-image" src="./assets/images/works06.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works07/index.html"><img class="item-image" src="./assets/images/works07.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works08/index.html"><img class="item-image" src="./assets/images/works08.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works09/index.html"><img class="item-image" src="./assets/images/works09.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works10/index.html"><img class="item-image" src="./assets/images/works10.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works11/index.html"><img class="item-image" src="./assets/images/works11.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works12/index.html"><img class="item-image" src="./assets/images/works12.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works13/index.html"><img class="item-image" src="./assets/images/works13.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works14/index.html"><img class="item-image" src="./assets/images/works14.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works15/index.html"><img class="item-image" src="./assets/images/works15.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works16/index.html"><img class="item-image" src="./assets/images/works16.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works17/index.html"><img class="item-image" src="./assets/images/works17.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works18/index.html"><img class="item-image" src="./assets/images/works18.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works19/index.html"><img class="item-image" src="./assets/images/works19.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works20/index.html"><img class="item-image" src="./assets/images/works20.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works21/index.html"><img class="item-image" src="./assets/images/works21.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works22/index.html"><img class="item-image" src="./assets/images/works22.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works23/index.html"><img class="item-image" src="./assets/images/works23.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works24/index.html"><img class="item-image" src="./assets/images/works24.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works25/index.html"><img class="item-image" src="./assets/images/works25.png" alt=""></a></li>
-        <li class="item"><a class="item-link" href="works26/index.html"><img class="item-image" src="./assets/images/works26.png" alt=""></a></li>
+        <li class="item">
+          <a class="item-link" href="works26/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works26.png" muted loop>
+              <source src="./assets/videos/works26.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works25/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works25.png" muted loop>
+              <source src="./assets/videos/works25.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works24/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works24.png" muted loop>
+              <source src="./assets/videos/works24.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works23/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works23.png" muted loop>
+              <source src="./assets/videos/works23.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works22/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works22.png" muted loop>
+              <source src="./assets/videos/works22.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works21/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works21.png" muted loop>
+              <source src="./assets/videos/works21.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works20/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works20.png" muted loop>
+              <source src="./assets/videos/works20.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works19/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works19.png" muted loop>
+              <source src="./assets/videos/works19.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works18/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works18.png" muted loop>
+              <source src="./assets/videos/works18.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works17/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works17.png" muted loop>
+              <source src="./assets/videos/works17.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works16/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works16.png" muted loop>
+              <source src="./assets/videos/works16.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works15/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works15.png" muted loop>
+              <source src="./assets/videos/works15.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works14/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works14.png" muted loop>
+              <source src="./assets/videos/works14.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works13/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works13.png" muted loop>
+              <source src="./assets/videos/works13.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works12/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works12.png" muted loop>
+              <source src="./assets/videos/works12.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works11/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works11.png" muted loop>
+              <source src="./assets/videos/works11.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works10/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works10.png" muted loop>
+              <source src="./assets/videos/works10.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works09/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works09.png" muted loop>
+              <source src="./assets/videos/works09.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works08/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works08.png" muted loop>
+              <source src="./assets/videos/works08.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works07/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works07.png" muted loop>
+              <source src="./assets/videos/works07.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works06/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works06.png" muted loop>
+              <source src="./assets/videos/works06.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works05/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works05.png" muted loop>
+              <source src="./assets/videos/works05.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works04/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works04.png" muted loop>
+              <source src="./assets/videos/works04.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works03/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works03.png" muted loop>
+              <source src="./assets/videos/works03.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works02/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works02.png" muted loop>
+              <source src="./assets/videos/works02.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
+          <a class="item-link" href="works01/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works01.png" muted loop>
+              <source src="./assets/videos/works01.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
       </ul>
     </div>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
