--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,13 @@
       <h1>WebGL works</h1>
       <ul class="list">
         <li class="item">
+          <a class="item-link" href="works27/index.html">
+            <video class="item-video js-item-video" poster="./assets/images/works26.png" muted loop>
+              <source src="./assets/videos/works26.mp4" type="video/mp4" />
+            </video>
+          </a>
+        </li>
+        <li class="item">
           <a class="item-link" href="works26/index.html">
             <video class="item-video js-item-video" poster="./assets/images/works26.png" muted loop>
               <source src="./assets/videos/works26.mp4" type="video/mp4" />
