add: works27 texture

--- a/src/works27/index.html
+++ b/src/works27/index.html
@@ -14,7 +14,9 @@
     <h1>works27</h1>
     <main>
       <div class="webgl"></div>
-      <p class="text">激</p>
+      <div class="text__wrapper">
+        <img class="text__image" src="./src/image/oku.png" alt="">
+      </div>
     </main>
     <script type="module" src="./src/ts/main.ts"></script>
   </body>
