fix: build file name

--- a/src/index.html
+++ b/src/index.html
@@ -205,6 +205,6 @@
         </li>
       </ul>
     </div>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/home.js"></script>
   </body>
 </html>
