add: works27 liquid effect

--- a/src/works27/index.html
+++ b/src/works27/index.html
@@ -8,15 +8,14 @@
     </style>
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
-    <title>works27</title>
+    <title>works29</title>
   </head>
   <body>
-    <h1>works27</h1>
+    <header>
+      <h1>works29</h1>
+    </header>
     <main>
       <div class="webgl"></div>
-      <div class="text__wrapper">
-        <img class="text__image" src="./src/image/oku.png" alt="">
-      </div>
     </main>
     <script type="module" src="./src/ts/main.ts"></script>
   </body>
