add: home works27

--- a/src/works27/index.html
+++ b/src/works27/index.html
@@ -8,12 +8,10 @@
     </style>
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
-    <title>works29</title>
+    <title>works27</title>
   </head>
   <body>
-    <header>
-      <h1>works29</h1>
-    </header>
+    <h1>Liquid Effect</h1>
     <main>
       <div class="webgl"></div>
     </main>
