add: works28 fake-3d

--- a/src/works28/index.html
+++ b/src/works28/index.html
@@ -11,11 +11,11 @@
     <title>works28</title>
   </head>
   <body>
-    <h1>works28</h1>
+    <h1>Fake 3D</h1>
     <main>
       <div class="webgl"></div>
-      <div class="card__wrapper">
-        <div class="card"></div>
+      <div class="image__wrapper">
+        <img src="./src/image/mountain.png" alt="" class="image">
       </div>
     </main>
     <script type="module" src="./src/ts/main.ts"></script>
