--- a/src/works26/index.html
+++ b/src/works26/index.html
@@ -8,17 +8,12 @@
     </style>
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
-    <title>works26</title>
+    <title>works27</title>
   </head>
   <body>
-    <h1>works26</h1>
+    <h1>Liquid Effect</h1>
     <main>
       <div class="webgl"></div>
-      <ul class="button-list">
-        <li class="button-item">
-          <button id="vomit">🤯</button>
-        </li>
-      </ul>
     </main>
     <script type="module" src="./src/ts/main.ts"></script>
   </body>
