--- a/src/works29/index.html
+++ b/src/works29/index.html
@@ -8,16 +8,18 @@
     </style>
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
-    <title>works29</title>
+    <title>Mahjong!!</title>
   </head>
   <body>
-    <div class="title__wrapper">
-      <h1>KI-OKU</h1>
-    </div>
-    <div class="webgl"></div>
+    <h1>Mahjong!!</h1>
     <main>
-      <div class="effect"></div>
+      <div class="webgl"></div>
+      <ul class="button-list">
+        <li class="button-item">
+          <button id="vomit">🤯</button>
+        </li>
+      </ul>
     </main>
-    <script type="module" src="./src/ts/app.ts"></script>
+    <script type="module" src="./src/ts/main.ts"></script>
   </body>
 </html>
