--- a/src/works28/index.html
+++ b/src/works28/index.html
@@ -8,16 +8,16 @@
     </style>
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
-    <title>works28</title>
+    <title>works29</title>
   </head>
   <body>
-    <h1>Fake 3D</h1>
+    <div class="title__wrapper">
+      <h1>KI-OKU</h1>
+    </div>
+    <div class="webgl"></div>
     <main>
-      <div class="webgl"></div>
-      <div class="image__wrapper">
-        <img src="./src/image/mountain.png" alt="" class="image">
-      </div>
+      <div class="effect"></div>
     </main>
-    <script type="module" src="./src/ts/main.ts"></script>
+    <script type="module" src="./src/ts/app.ts"></script>
   </body>
 </html>
