fix: refactor works01

--- a/src/works01/index.html
+++ b/src/works01/index.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="../assets/css/reset.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CubeCube</title>
+    <title>Lots of squares</title>
     <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
   </head>
   <body>
     <header class="header">
-      <h1 class="header__title">CubeCube</h1>
+      <h1 class="header__title">Lots of squares</h1>
       <ul class="header__list">
         <li class="header__item"><a href="https://github.com/taic-dev/webgl-works/tree/main/src/works01" class="header__link" target="_blank" rel="noopener noreferrer">Github</a></li>
         <li class="header__item"><a href="https://x.com/taic_dev_/status/1695725800157511984" class="header__link" target="_blank" rel="noopener noreferrer">X</a></li>
